--- a/ecosystem_graph.html
+++ b/ecosystem_graph.html
@@ -6,284 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BBPS Recursive Architecture</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
-
-        body {
-            font-family: 'Inter', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f8fafc;
-            width: 100vw;
-            height: 100vh;
-            overflow: hidden;
-        }
-
-        /* --- UI Overlay --- */
-        #ui-layer {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            pointer-events: none;
-            z-index: 10;
-        }
-
-        .header-box {
-            background: rgba(255, 255, 255, 0.95);
-            backdrop-filter: blur(8px);
-            padding: 12px 24px;
-            border-bottom: 1px solid #e2e8f0;
-            pointer-events: auto;
-            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05);
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-
-        .top-row {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        h1 {
-            margin: 0;
-            font-size: 18px;
-            color: #0f172a;
-            font-weight: 700;
-        }
-
-        .subtitle {
-            font-size: 12px;
-            color: #64748b;
-            margin: 0;
-        }
-
-        /* Breadcrumbs */
-        .breadcrumbs {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            font-size: 13px;
-            flex-wrap: wrap;
-        }
-
-        .crumb {
-            cursor: pointer;
-            color: #2563eb;
-            font-weight: 500;
-            padding: 4px 8px;
-            border-radius: 4px;
-            background: #eff6ff;
-            transition: all 0.2s;
-            display: flex;
-            align-items: center;
-            gap: 5px;
-        }
-
-        .crumb:hover {
-            background: #dbeafe;
-        }
-
-        .crumb.active {
-            color: #64748b;
-            background: transparent;
-            cursor: default;
-            font-weight: 600;
-        }
-
-        .separator {
-            color: #94a3b8;
-            font-size: 10px;
-        }
-
-        /* Legend */
-        .legend {
-            display: flex;
-            gap: 12px;
-            font-size: 11px;
-            color: #475569;
-        }
-
-        .legend-item {
-            display: flex;
-            align-items: center;
-            gap: 5px;
-        }
-
-        .dot {
-            width: 8px;
-            height: 8px;
-            border-radius: 50%;
-        }
-
-        /* Graph */
-        #graph-container {
-            width: 100%;
-            height: 100%;
-            cursor: grab;
-        }
-
-        #graph-container:active {
-            cursor: grabbing;
-        }
-
-        /* Modal */
-        .modal-overlay {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(15, 23, 42, 0.4);
-            backdrop-filter: blur(2px);
-            z-index: 100;
-            justify-content: center;
-            align-items: center;
-            pointer-events: auto;
-        }
-
-        .modal-box {
-            background: white;
-            width: 90%;
-            max-width: 450px;
-            border-radius: 12px;
-            box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-            animation: slideUp 0.2s ease-out;
-        }
-
-        @keyframes slideUp {
-            from {
-                transform: translateY(10px);
-                opacity: 0;
-            }
-
-            to {
-                transform: translateY(0);
-                opacity: 1;
-            }
-        }
-
-        .modal-header {
-            padding: 16px 20px;
-            border-bottom: 1px solid #f1f5f9;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .modal-title {
-            font-size: 16px;
-            font-weight: 700;
-            margin: 0;
-            color: #0f172a;
-        }
-
-        .close-btn {
-            background: none;
-            border: none;
-            font-size: 20px;
-            cursor: pointer;
-            color: #94a3b8;
-        }
-
-        .modal-content {
-            padding: 20px;
-            font-size: 14px;
-            color: #334155;
-            line-height: 1.5;
-        }
-
-        .badge {
-            display: inline-block;
-            padding: 3px 8px;
-            border-radius: 4px;
-            font-size: 10px;
-            font-weight: 700;
-            text-transform: uppercase;
-            margin-bottom: 10px;
-        }
-
-        .badge-entity {
-            background: #eff6ff;
-            color: #2563eb;
-        }
-
-        .badge-flow {
-            background: #fff7ed;
-            color: #ea580c;
-        }
-
-        .badge-internal {
-            background: #f0fdf4;
-            color: #16a34a;
-        }
-
-        /* D3 Elements */
-        .link {
-            fill: none;
-            stroke: #cbd5e1;
-            stroke-width: 1.5px;
-        }
-
-        .node circle {
-            stroke: #fff;
-            stroke-width: 3px;
-            transition: all 0.3s;
-        }
-
-        .node text {
-            font-size: 11px;
-            font-weight: 700;
-            fill: #334155;
-            pointer-events: none;
-            text-shadow: 0 1px 2px white;
-        }
-
-        /* Node Types */
-        .node.has-children circle {
-            stroke: #2563eb;
-            stroke-width: 4px;
-            stroke-dasharray: 6 3;
-        }
-
-        /* Dashed border for drill-down nodes */
-        .node:hover circle {
-            filter: drop-shadow(0 0 8px rgba(37, 99, 235, 0.3));
-        }
-
-        .node.clickable {
-            cursor: pointer;
-        }
-
-        /* Info Icon */
-        .icon-group {
-            cursor: pointer;
-        }
-
-        .icon-group circle {
-            fill: #fff;
-            stroke: #2563eb;
-            stroke-width: 1.5px;
-            transition: all 0.2s;
-        }
-
-        .icon-group:hover circle {
-            fill: #eff6ff;
-            r: 12;
-        }
-
-        .icon-group text {
-            font-family: serif;
-            font-weight: bold;
-            font-size: 10px;
-            fill: #2563eb;
-            pointer-events: none;
-        }
-    </style>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
