restructured the app

--- a/ecosystem_graph.html
+++ b/ecosystem_graph.html
@@ -42,10 +42,10 @@
 
     <div id="modal"></div>
 
-    <script type="text/javascript" src="./js/ecosystem_data.js"></script>
-    <script type="text/javascript" src="./js/ecosystem_graph_entities.js"></script>
-    <script type="text/javascript" src="./js/graph_modal.js"></script>
-    <script type="text/javascript" src="./js/ecosystem_graph.js"></script>
+    <script type="text/javascript" src="./js/d3graph/ecosystem_data.js"></script>
+    <script type="text/javascript" src="./js/d3graph/ecosystem_graph_entities.js"></script>
+    <script type="text/javascript" src="./js/d3graph/graph_modal.js"></script>
+    <script type="text/javascript" src="./js/d3graph/ecosystem_graph.js"></script>
     <script type="text/javascript" src="./js/scripts.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
