added codeicon.css and updated icon.html

--- a/icon.html
+++ b/icon.html
@@ -205,6 +205,26 @@
         <h1>Codicon Icons Gallery</h1>
         <p>Click any icon to copy its CSS class</p>
         <a href="https://microsoft.github.io/vscode-codicons/dist/codicon.html">Official Codicon Gallery</a>
+        <pre>
+        https://unpkg.com/@vscode/codicons@0.0.44/dist/codicon.css
+        webfont :
+        <link rel="stylesheet" href="https://unpkg.com/@vscode/codicons/dist/codicon.css">
+<i class="codicon codicon-file"></i>
+<i class="codicon codicon-folder"></i>
+<i class="codicon codicon-search"></i>
+</pre>
+<pre>
+    svg sprite
+    <svg class="codicon">
+  <use xlink:href="codicon.svg#file"></use>
+</svg>
+</pre>
+<pre>
+    inline svg
+    <svg viewBox="0 0 16 16" fill="currentColor">
+  <path d="..."/>
+</svg>
+</pre>
     </div>
 
     <div class="search-box">
