Added description field to interaction, hid metadata (id, to, from), added max/min to modal

--- a/ecosystem_graph.html
+++ b/ecosystem_graph.html
@@ -49,6 +49,7 @@
 
     <script type="text/javascript" src="./js/d3graph/ecosystem_data.js"></script>
     <script type="text/javascript" src="./js/d3graph/ecosystem_graph_entities.js"></script>
+    <script type="text/javascript" src="./js/d3graph/modal_base.js"></script>
     <script type="text/javascript" src="./js/d3graph/graph_modal.js"></script>
     <script type="text/javascript" src="./js/d3graph/ecosystem_graph.js"></script>
     <script type="text/javascript" src="./js/scripts.js"></script>
