--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
     <script type="text/javascript" src="./js/lib/storage.js"></script>
     <script type="text/javascript" src="./js/d3graph/utils.js"></script>
     <script type="text/javascript" src="./js/d3graph/ecosystem_graph_entities.js"></script>
+    <script type="text/javascript" src="./js/d3graph/modal_base.js"></script>
     <script type="text/javascript" src="./js/d3graph/graph_modal.js"></script>
     <script type="text/javascript" src="./js/lib/context_menu.js"></script>
     <script type="text/javascript" src="./js/d3graph/property_editor.js"></script>
